refactor(chat): reback /api/messages seller channel on ConversationService
Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>